cmake_minimum_required (VERSION 2.6)
set(CMAKE_VERBOSE_MAKEFILE ON)
#project (lidarTest) #uncomment to compile test
project (broadcastLidar)
SET(GCC_FLAGS "-Wl --verbose -v --wackyargument")
SET( CMAKE_CXX_FLAGS  "${CMAKE_CXX_FLAGS} ${GCC__FLAGS}" )
SET(LINK_FLAGS    "-t")
SET( CMAKE_EXE_LINKER_FLAGS  "${CMAKE_EXE_LINKER_FLAGS} ${GCC_COVERAGE_LINK_FLAGS}" )
include_directories(include)
#add_executable(lidarTest src/lidarTest.c src/lidarLite.c include/lidarLite.h)
add_executable(broadcastLidar src/broadcastLidar.c src/lidarLite.c include/lidarLite.h src/udp.c include/udp.h)
#target_link_libraries (lidarTest wiringPi wiringPiDev pthread)
target_link_libraries (broadcastLidar wiringPi wiringPiDev pthread)
